fix margin on mobile immersive container for show the difference between footer and planet

--- a/frontend/src/sass/_mobile_immersive.scss
+++ b/frontend/src/sass/_mobile_immersive.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 2rem;
+    gap: 4rem;
+    margin-bottom: 4rem;
     .container-mobile{
       width: 27rem;
       height: 27rem;
